--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.SageFemme"
         tools:targetApi="31">
         <activity
+            android:name=".PlanningpopActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UrgencepopActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SuitepopActivity"
+            android:exported="false" />
+        <activity
             android:name=".cpf"
             android:exported="false" />
         <activity
