--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,47 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.sagefemme">
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/img"
+        android:label="@string/Check_SF"
+        android:roundIcon="@drawable/img"
         android:supportsRtl="true"
         android:theme="@style/Theme.SageFemme"
         tools:targetApi="31">
-        <activity
-            android:name=".PlanningpopActivity"
-            android:exported="false" />
-        <activity
-            android:name=".UrgencepopActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SuitepopActivity"
-            android:exported="false" />
-        <activity
-            android:name=".cpf"
-            android:exported="false" />
-        <activity
-            android:name=".pmi"
-            android:exported="false" />
-        <activity
-            android:name=".reanimation"
-            android:exported="false" />
-        <activity
-            android:name=".GHR"
-            android:exported="false" />
-        <activity
-            android:name=".suitedecouche"
-            android:exported="false" />
-        <activity
-            android:name=".sallenaissance"
-            android:exported="false" />
-        <activity
-            android:name=".choix"
-            android:exported="false" />
+
+        <!-- Activité principale (lancement de l'app) -->
         <activity
             android:name=".first"
             android:exported="true"
@@ -49,14 +22,30 @@
             android:theme="@style/Theme.SageFemme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <!-- Autres activités -->
+        <activity android:name=".planningpop" android:exported="false"
+            tools:ignore="Instantiatable,MissingClass" />
+        <activity android:name=".urgencepop" android:exported="false"
+            tools:ignore="Instantiatable,MissingClass" />
+        <activity android:name=".suitepop" android:exported="false"
+            tools:ignore="Instantiatable,MissingClass" />
+        <activity android:name=".cpf" android:exported="false" />
+        <activity android:name=".pmi" android:exported="false" />
+        <activity android:name=".reanimation" android:exported="false" />
+        <activity android:name=".GHR" android:exported="false" />
+        <activity android:name=".suitedecouche" android:exported="false" />
+        <activity android:name=".sallenaissance" android:exported="false" />
+        <activity android:name=".choix" android:exported="false" />
+
+        <!-- Polices préchargées -->
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
     </application>
 
 </manifest>
